--- a/contacto.html
+++ b/contacto.html
@@ -23,16 +23,16 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="index.html">Home</a>
+						<a class="nav-link" aria-current="page" href="index.html">Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="nosotros.html">Nosotros</a>
+						<a class="nav-link" aria-current="page" href="nosotros.html">Nosotros</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="servicios.html">Servicios</a>
+						<a class="nav-link" aria-current="page" href="servicios.html">Servicios</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="contacto.html">Contacto</a>
+						<a class="nav-link active" href="contacto.html">Contacto</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="tienda.html">Tienda</a>
